--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "package.json": "^2.0.1",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
+    "util": "^0.12.5",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
